--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Screen Region Detector - Client Side</title>
+  <title>Screen Region Detector</title>
   <style>
     * {
       margin: 0;
@@ -13,12 +13,8 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #0f0f0f;
-      color: #fff;
-      overflow: hidden;
-    }
-
-    .container {
+      background: #f5f5f5;
+      color: #333;
       display: flex;
       flex-direction: column;
       height: 100vh;
@@ -26,38 +22,29 @@
 
     .header {
       padding: 1rem 2rem;
-      background: #1a1a1a;
-      border-bottom: 1px solid #333;
+      background: white;
+      border-bottom: 1px solid #e0e0e0;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
 
-    .header h1 {
+    h1 {
       font-size: 1.5rem;
       font-weight: 600;
-    }
-
-    .badge {
-      background: #00ff88;
-      color: #000;
-      padding: 0.25rem 0.75rem;
-      border-radius: 12px;
-      font-size: 0.75rem;
-      font-weight: 600;
-      text-transform: uppercase;
+      color: #333;
     }
 
     .controls {
       display: flex;
       gap: 1rem;
-      align-items: center;
     }
 
     button {
       padding: 0.75rem 1.5rem;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       font-size: 0.9rem;
       font-weight: 600;
       cursor: pointer;
@@ -65,22 +52,21 @@
     }
 
     .btn-primary {
-      background: #00ff88;
-      color: #000;
+      background: #2196F3;
+      color: white;
     }
 
     .btn-primary:hover {
-      background: #00dd77;
-      transform: translateY(-1px);
+      background: #1976D2;
     }
 
     .btn-danger {
-      background: #ff4444;
-      color: #fff;
+      background: #f44336;
+      color: white;
     }
 
     .btn-danger:hover {
-      background: #dd3333;
+      background: #d32f2f;
     }
 
     button:disabled {
@@ -92,6 +78,10 @@
       flex: 1;
       position: relative;
       overflow: hidden;
+      background: white;
+      margin: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
 
     .video-container {
@@ -101,7 +91,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #000;
     }
 
     #videoElement {
@@ -112,55 +101,7 @@
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
-    }
-
-    .stats {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 1rem;
       border-radius: 8px;
-      font-size: 0.85rem;
-      min-width: 200px;
-    }
-
-    .stat-row {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 0.5rem;
-    }
-
-    .stat-label {
-      color: #888;
-    }
-
-    .stat-value {
-      color: #00ff88;
-      font-weight: 600;
-    }
-
-    .loading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }
-
-    .spinner {
-      border: 3px solid #333;
-      border-top: 3px solid #00ff88;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 1rem;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
     }
 
     .placeholder {
@@ -171,107 +112,79 @@
     .placeholder h2 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: #333;
     }
 
-    .settings {
+    .placeholder p {
+      color: #666;
+      font-size: 0.95rem;
+    }
+
+    .stats {
       position: absolute;
-      bottom: 1rem;
-      left: 1rem;
-      background: rgba(0, 0, 0, 0.8);
+      top: 1rem;
+      right: 1rem;
+      background: white;
       padding: 1rem;
       border-radius: 8px;
       font-size: 0.85rem;
+      min-width: 180px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+      border: 1px solid #e0e0e0;
     }
 
-    .setting-item {
-      margin-bottom: 0.75rem;
+    .stat-row {
       display: flex;
-      align-items: center;
-      gap: 0.5rem;
+      justify-content: space-between;
+      margin-bottom: 0.5rem;
     }
 
-    .setting-item label {
-      cursor: pointer;
+    .stat-label {
+      color: #666;
     }
 
-    input[type="checkbox"] {
-      cursor: pointer;
-    }
-
-    input[type="range"] {
-      width: 150px;
+    .stat-value {
+      color: #2196F3;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <div style="display: flex; align-items: center; gap: 1rem;">
-        <h1>🎯 Screen Region Detector</h1>
-        <span class="badge">Client-Side Only</span>
-      </div>
-      <div class="controls">
-        <button id="startBtn" class="btn-primary">Start Detection</button>
-        <button id="stopBtn" class="btn-danger" disabled>Stop</button>
+  <div class="header">
+    <h1>Screen Region Detector</h1>
+    <div class="controls">
+      <label style="display: flex; align-items: center; gap: 0.5rem; margin-right: 1rem; cursor: pointer;">
+        <input type="checkbox" id="showBounds" checked style="width: 18px; height: 18px; cursor: pointer;">
+        <span style="font-size: 0.9rem;">Show Bounds</span>
+      </label>
+      <button id="startBtn" class="btn-primary">Start Detection</button>
+      <button id="stopBtn" class="btn-danger" disabled>Stop</button>
+    </div>
+  </div>
+
+  <div class="main-content">
+    <div class="video-container">
+      <video id="videoElement" autoplay playsinline></video>
+      <canvas id="displayCanvas"></canvas>
+      
+      <div id="placeholder" class="placeholder">
+        <h2>Ready to Start</h2>
+        <p>Click "Start Detection" to begin</p>
       </div>
     </div>
 
-    <div class="main-content">
-      <div class="video-container">
-        <video id="videoElement" autoplay playsinline></video>
-        <canvas id="displayCanvas"></canvas>
-        
-        <div id="placeholder" class="placeholder">
-          <h2>Ready to Start</h2>
-          <p>Click "Start Detection" to begin screen capture</p>
-          <p style="margin-top: 1rem; font-size: 0.85rem; color: #888;">
-            All processing happens locally in your browser. No data is uploaded.
-          </p>
-        </div>
-
-        <div id="loading" class="loading" style="display: none;">
-          <div class="spinner"></div>
-          <p>Loading AI model...</p>
-        </div>
+    <div class="stats" id="stats" style="display: none;">
+      <div class="stat-row">
+        <span class="stat-label">FPS:</span>
+        <span class="stat-value" id="fps">0</span>
       </div>
-
-      <div class="stats" id="stats" style="display: none;">
-        <div class="stat-row">
-          <span class="stat-label">FPS:</span>
-          <span class="stat-value" id="fps">0</span>
-        </div>
-        <div class="stat-row">
-          <span class="stat-label">Latency:</span>
-          <span class="stat-value" id="latency">0ms</span>
-        </div>
-        <div class="stat-row">
-          <span class="stat-label">Detections:</span>
-          <span class="stat-value" id="detections">0</span>
-        </div>
-        <div class="stat-row">
-          <span class="stat-label">Model:</span>
-          <span class="stat-value" id="model">Loading...</span>
-        </div>
+      <div class="stat-row">
+        <span class="stat-label">Latency:</span>
+        <span class="stat-value" id="latency">0ms</span>
       </div>
-
-      <div class="settings" id="settings">
-        <div class="setting-item">
-          <input type="checkbox" id="showLabels" checked>
-          <label for="showLabels">Show Labels</label>
-        </div>
-        <div class="setting-item">
-          <input type="checkbox" id="showConfidence" checked>
-          <label for="showConfidence">Show Confidence</label>
-        </div>
-        <div class="setting-item">
-          <input type="checkbox" id="enableOCR">
-          <label for="enableOCR">Enable OCR</label>
-        </div>
-        <div class="setting-item">
-          <label for="confidenceThreshold">Min Confidence:</label>
-          <input type="range" id="confidenceThreshold" min="0.1" max="0.9" step="0.1" value="0.5">
-          <span id="confidenceValue">0.5</span>
-        </div>
+      <div class="stat-row">
+        <span class="stat-label">Regions:</span>
+        <span class="stat-value" id="detections">0</span>
       </div>
     </div>
   </div>
