Fix null element error - add null checks for optional settings elements

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
         <h2>Ready to Start</h2>
         <p>Click "Start Detection" to begin</p>
       </div>
+
+      <div id="loading" class="placeholder" style="display: none;">
+        <h2>Loading...</h2>
+        <p>Please wait</p>
+      </div>
     </div>
 
     <div class="stats" id="stats" style="display: none;">
