--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
         <span class="stat-label">Regions:</span>
         <span class="stat-value" id="detections">0</span>
       </div>
+      <div class="stat-row">
+        <span class="stat-label">Model:</span>
+        <span class="stat-value" id="model" style="font-size: 0.75rem;">-</span>
+      </div>
     </div>
   </div>
 
